# hubbard

./: .gitignore  README.md  pyproject.toml
examples/: chain_scan.py  custom_hopping.py  orbital_rotation.py  two_site.py
hubbard_ed/: __init__.py  analytic.py  basis.py  hamiltonian.py  interactions.py  lanczos.py  observables.py  operators.py  orbitals.py
tests/: test_atomic_limit.py  test_basis.py  test_hamiltonian.py  test_hopping.py  test_hopping_matrix.py  test_noninteracting.py  test_observables.py  test_orbitals.py  test_symmetry.py  test_two_body_tensor.py  test_two_site.py
tutorial/: Makefile  README.md  main.tex  preamble.tex
tutorial/chapters/: 01_model_and_basis.tex  02_fermionic_operators.tex  03_sparse_hamiltonian.tex  04_matrix_free_lanczos.tex  05_observables.tex  06_validation.tex  07_general_hopping.tex  08_exact_orbital_rotations.tex  08_research_extensions.tex  09_research_extensions.tex
tutorial/code/: step01_basis.py  step02_fermion_signs.py  step03_sparse_hamiltonian.py  step04_matrix_free.py  step05_ground_state.py  step06_observables.py  step07_generic_hopping.py  step08_orbital_rotation.py
