[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hubbard-ed"
version = "0.1.0"
description = "A small, trustworthy exact-diagonalization reference for the 1D Hubbard model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.7"]
dev = [
    "pytest>=7.4",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
include = ["hubbard_ed*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
